--- a/gui/main_window.ui
+++ b/gui/main_window.ui
@@ -91,6 +91,9 @@
         <property name="buttonSymbols">
          <enum>QAbstractSpinBox::PlusMinus</enum>
         </property>
+        <property name="keyboardTracking">
+         <bool>false</bool>
+        </property>
         <property name="decimals">
          <number>3</number>
         </property>
@@ -109,6 +112,9 @@
        <widget class="QSpinBox" name="Att_prm">
         <property name="buttonSymbols">
          <enum>QAbstractSpinBox::PlusMinus</enum>
+        </property>
+        <property name="keyboardTracking">
+         <bool>false</bool>
         </property>
         <property name="maximum">
          <number>30</number>
@@ -139,6 +145,9 @@
         <property name="buttonSymbols">
          <enum>QAbstractSpinBox::PlusMinus</enum>
         </property>
+        <property name="keyboardTracking">
+         <bool>false</bool>
+        </property>
         <property name="decimals">
          <number>3</number>
         </property>
@@ -157,6 +166,9 @@
        <widget class="QDoubleSpinBox" name="Att2_prd">
         <property name="buttonSymbols">
          <enum>QAbstractSpinBox::PlusMinus</enum>
+        </property>
+        <property name="keyboardTracking">
+         <bool>false</bool>
         </property>
         <property name="decimals">
          <number>1</number>
@@ -304,6 +316,9 @@
         <property name="buttonSymbols">
          <enum>QAbstractSpinBox::PlusMinus</enum>
         </property>
+        <property name="keyboardTracking">
+         <bool>false</bool>
+        </property>
         <property name="maximum">
          <number>22</number>
         </property>
@@ -330,7 +345,7 @@
          <string notr="true"/>
         </property>
         <property name="keyboardTracking">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
         <property name="decimals">
          <number>1</number>
@@ -353,6 +368,9 @@
        <widget class="QSpinBox" name="Synt">
         <property name="buttonSymbols">
          <enum>QAbstractSpinBox::PlusMinus</enum>
+        </property>
+        <property name="keyboardTracking">
+         <bool>false</bool>
         </property>
         <property name="minimum">
          <number>9000</number>
